# ShadowID

./: .env.example  .gitignore  README.md  package.json  render-backend.yaml  render-fresh.yaml  render-simple.yaml  render.yaml  server.js  start-backend.bat
backend/: .dockerignore  .env.example  .env.noir-zk  .env.production.backend  .env.test  Cargo.toml  Dockerfile  Nargo.toml  dao.js  demo-working-system.js  deployment-info.json  final-demo.js  hardhat.config.js  index.js  jsconfig.json  kyc.js  package-lock.json  package-noir-zk.json  package.json  perfect-demo.js  server-noir-zk.js  server.js  setup-noir-zk.ps1  setup-noir-zk.sh  test.js
backend/config/: adminConfig.js
backend/contracts-stylus/: .env.example  .gitignore  CONTRACT-FIXES-REPORT.md  Cargo-full.toml  Cargo-minimal-working.toml  Cargo-minimal.toml  Cargo-original.toml  Cargo-simple.toml  Cargo-ultra-minimal.toml  Cargo-windows.toml  Cargo.toml  DAO_SHADOWID_INTEGRATION.md  DOCKER_COMMANDS.md  DOCKER_FIXES.md  DOCKER_SETUP.md  Dockerfile  GITHUB_CODESPACES_SETUP.md  ONLINE_ALTERNATIVES.md  README.md  README_ZK_VERIFIER.md  ShadowIDRegistry_CONTRACT_CODE.txt  WINDOWS_COMPILATION_ISSUES.md  WSL2_SETUP.md  ZK_VERIFIER_README.md  build-stylus.ps1  build.ps1  build.sh  compile-stylus.ps1  deploy-commands.md  deploy-nitro-complete.ps1  deploy-proper.js  deploy-stylus.bat  deploy-stylus.ps1  deploy.js  docker-compose.yml  docker-menu.ps1  fix-docker.ps1  mock-deploy.ps1  package-lock.json  package.json  (+7 more)
backend/deployments/: arbitrum-sepolia.json
backend/prisma/: dao.db  schema.prisma
backend/routes/: alchemyRoutes.js  arbiscanRoutes.js  crowdfundingRoutes.js  ipfsRoutes.js  kybRoutes.js  kycRoutes.js  pinataRoutes.js  proposalRoutes.js  treasuryAnalyticsRoutes.js  treasuryRoutes.js  userRoutes.js  webhookRoutes.js  (+1 more)
(+300 files in other folders)
