[package]
name = "dvote-dao-stylus"
version = "0.1.0"
edition = "2021"

[dependencies]
stylus-sdk = "0.8.4"

[features]
export-abi = ["stylus-sdk/export-abi"]
debug = ["stylus-sdk/debug"]

[lib]
crate-type = ["lib", "cdylib"]

[profile.release]
codegen-units = 1
strip = true
lto = true
panic = "abort"
opt-level = "s"

[workspace]
